--- a/Client/Screens/learn2play.html
+++ b/Client/Screens/learn2play.html
@@ -148,7 +148,7 @@
       <p>In poker, hands are ranked from highest to lowest as shown in the image below:</p>
       
       <div class="hand-image">
-        <img src="images/Hand-Rankings-Upswing-Poker.jpg" alt="Poker Hand Rankings">
+        <img src="../images/Hand-Rankings-Upswing-Poker.jpg" alt="Poker Hand Rankings">
       </div>
       
       <!-- Removed the text list since the image provides all the information -->
@@ -188,4 +188,4 @@
     });
   </script>
 </body>
-</html>
+</html>W
