--- a/Client/Screens/login.html
+++ b/Client/Screens/login.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Haflop - Login</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="../style.css">
   <style>
     .password-container {
       position: relative;
