--- a/Client/Screens/reset-password.html
+++ b/Client/Screens/reset-password.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Haflop - Reset Password</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="../style.css">
 </head>
 
 <body>
