--- a/Client/Screens/poker/poker.html
+++ b/Client/Screens/poker/poker.html
@@ -175,8 +175,8 @@
     </div>
   </div>
 
-  <!-- Include socket.io client from CDN -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.7.2/socket.io.min.js"></script>
+  <!-- Include socket.io client directly from CDN -->
+  <script src="https://cdn.socket.io/4.7.2/socket.io.min.js" integrity="sha384-mZLF4UVrpi/QTWPA7BjNPEnkIfRFn4ZEO3Qt/HFklTJBj/gBOV8G3HcKn4NfQblz" crossorigin="anonymous"></script>
   
   <!-- Include our poker solver and game logic -->
   <script src="../../pokerSolver.js"></script>
