--- a/Client/Screens/learn2play.html
+++ b/Client/Screens/learn2play.html
@@ -102,7 +102,7 @@
 </head>
 
 <body>
-  <div class="back-button" onclick="window.location.href='index.html'">← Back</div>
+  <div class="back-button" onclick="window.location.pathname = '/Screens/index.html'">← Back</div>
 
   <div class="header">
     <div class="title">How to Play Poker</div>
@@ -184,8 +184,8 @@
   <script>
     // JavaScript for handling the back button
     document.querySelector('.back-button').addEventListener('click', function() {
-      window.location.href = 'index.html';
+      window.location.pathname = '/Screens/index.html';
     });
   </script>
 </body>
-</html>W
+</html>
