no need for the stupid 2 weeks note thing

--- a/Client/Screens/login.html
+++ b/Client/Screens/login.html
@@ -74,7 +74,7 @@
         
         <div class="form-group" style="display: flex; align-items: center;">
           <input type="checkbox" id="remember-me" name="remember-me" style="width: auto; margin-right: 10px;">
-          <label for="remember-me" style="margin-bottom: 0;">Remember me for 2 weeks</label>
+          <label for="remember-me" style="margin-bottom: 0;">Remember me</label>
         </div>
         
         <button type="submit" class="submit-btn button">Log In</button>
