--- a/Client/Screens/poker/poker.html
+++ b/Client/Screens/poker/poker.html
@@ -182,6 +182,10 @@
   <script src="../../pokerSolver.js"></script>
   <script src="socket-client.js"></script>
   <script src="game.js"></script>
+  <script>
+    document.cookie = "SameSite=None; Secure";
+  </script>
+  <script src="https://cdn.socket.io/4.7.2/socket.io.min.js" integrity="sha384-mZLF4UVrpi/QTWPA7BjNPEnkIfRFn4ZEO3Qt/HFklTJBj/gBOV8G3HcKn4NfQblz" crossorigin="anonymous"></script>
 </body>
 
 </html>
