i yelled at him.

--- a/Client/Screens/poker/poker.html
+++ b/Client/Screens/poker/poker.html
@@ -38,103 +38,103 @@
         <div class="card face-down">?</div>
         <div class="card face-down">?</div>
       </div>
+    </div>
 
-      <!-- Player Seats -->
-      <div class="player-seats">
-        <!-- Player 1 (Top Left) -->
-        <div class="player-seat" id="seat-1">
-          <div class="player hidden">
-            <div class="player-cards">
-              <div class="card face-down"></div>
-              <div class="card face-down"></div>
-            </div>
-            <div class="player-info">
-              <div class="player-name">Empty Seat</div>
-              <div class="player-chips">$0</div>
-            </div>
-            <div class="player-bet hidden">$0</div>
-            <div class="player-status hidden"></div>
+    <!-- Player Seats - OUTSIDE the table -->
+    <div class="player-seats">
+      <!-- Player 1 (Top Left) -->
+      <div class="player-seat" id="seat-1">
+        <div class="player hidden">
+          <div class="player-cards">
+            <div class="card face-down"></div>
+            <div class="card face-down"></div>
           </div>
+          <div class="player-info">
+            <div class="player-name">Empty Seat</div>
+            <div class="player-chips">$0</div>
+          </div>
+          <div class="player-bet hidden">$0</div>
+          <div class="player-status hidden"></div>
         </div>
+      </div>
 
-        <!-- Player 2 (Top) -->
-        <div class="player-seat" id="seat-2">
-          <div class="player hidden">
-            <div class="player-cards">
-              <div class="card face-down"></div>
-              <div class="card face-down"></div>
-            </div>
-            <div class="player-info">
-              <div class="player-name">Empty Seat</div>
-              <div class="player-chips">$0</div>
-            </div>
-            <div class="player-bet hidden">$0</div>
-            <div class="player-status hidden"></div>
+      <!-- Player 2 (Top) -->
+      <div class="player-seat" id="seat-2">
+        <div class="player hidden">
+          <div class="player-cards">
+            <div class="card face-down"></div>
+            <div class="card face-down"></div>
           </div>
+          <div class="player-info">
+            <div class="player-name">Empty Seat</div>
+            <div class="player-chips">$0</div>
+          </div>
+          <div class="player-bet hidden">$0</div>
+          <div class="player-status hidden"></div>
         </div>
+      </div>
 
-        <!-- Player 3 (Top Right) -->
-        <div class="player-seat" id="seat-3">
-          <div class="player hidden">
-            <div class="player-cards">
-              <div class="card face-down"></div>
-              <div class="card face-down"></div>
-            </div>
-            <div class="player-info">
-              <div class="player-name">Empty Seat</div>
-              <div class="player-chips">$0</div>
-            </div>
-            <div class="player-bet hidden">$0</div>
-            <div class="player-status hidden"></div>
+      <!-- Player 3 (Top Right) -->
+      <div class="player-seat" id="seat-3">
+        <div class="player hidden">
+          <div class="player-cards">
+            <div class="card face-down"></div>
+            <div class="card face-down"></div>
           </div>
+          <div class="player-info">
+            <div class="player-name">Empty Seat</div>
+            <div class="player-chips">$0</div>
+          </div>
+          <div class="player-bet hidden">$0</div>
+          <div class="player-status hidden"></div>
         </div>
+      </div>
 
-        <!-- Player 4 (Bottom Right) -->
-        <div class="player-seat" id="seat-4">
-          <div class="player hidden">
-            <div class="player-cards">
-              <div class="card face-down"></div>
-              <div class="card face-down"></div>
-            </div>
-            <div class="player-info">
-              <div class="player-name">Empty Seat</div>
-              <div class="player-chips">$0</div>
-            </div>
-            <div class="player-bet hidden">$0</div>
-            <div class="player-status hidden"></div>
+      <!-- Player 4 (Bottom Right) -->
+      <div class="player-seat" id="seat-4">
+        <div class="player hidden">
+          <div class="player-cards">
+            <div class="card face-down"></div>
+            <div class="card face-down"></div>
           </div>
+          <div class="player-info">
+            <div class="player-name">Empty Seat</div>
+            <div class="player-chips">$0</div>
+          </div>
+          <div class="player-bet hidden">$0</div>
+          <div class="player-status hidden"></div>
         </div>
+      </div>
 
-        <!-- Player 5 (Bottom Left) -->
-        <div class="player-seat" id="seat-5">
-          <div class="player hidden">
-            <div class="player-cards">
-              <div class="card face-down"></div>
-              <div class="card face-down"></div>
-            </div>
-            <div class="player-info">
-              <div class="player-name">Empty Seat</div>
-              <div class="player-chips">$0</div>
-            </div>
-            <div class="player-bet hidden">$0</div>
-            <div class="player-status hidden"></div>
+      <!-- Player 5 (Bottom Left) -->
+      <div class="player-seat" id="seat-5">
+        <div class="player hidden">
+          <div class="player-cards">
+            <div class="card face-down"></div>
+            <div class="card face-down"></div>
           </div>
+          <div class="player-info">
+            <div class="player-name">Empty Seat</div>
+            <div class="player-chips">$0</div>
+          </div>
+          <div class="player-bet hidden">$0</div>
+          <div class="player-status hidden"></div>
         </div>
+      </div>
 
-        <!-- Current Player (Me) - Always at Bottom -->
-        <div class="player-seat user-seat" id="seat-0">
-          <div class="player" id="current-player">
-            <div class="player-cards">
-              <div class="card">A♠</div>
-              <div class="card">K♠</div>
-            </div>
-            <div class="player-info">
-              <div class="player-name">You</div>
-              <div class="player-chips">$1000</div>
-            </div>
-            <div class="player-bet hidden">$0</div>
-            <div class="player-status hidden"></div>
+      <!-- Current Player (Me) - Always at Bottom -->
+      <div class="player-seat user-seat" id="seat-0">
+        <div class="player" id="current-player">
+          <div class="player-cards">
+            <div class="card">A♠</div>
+            <div class="card">K♠</div>
           </div>
+          <div class="player-info">
+            <div class="player-name">You</div>
+            <div class="player-chips">$1000</div>
+          </div>
+          <div class="player-bet hidden">$0</div>
+          <div class="player-status hidden"></div>
         </div>
       </div>
     </div>
