--- a/Client/Screens/poker/poker.html
+++ b/Client/Screens/poker/poker.html
@@ -40,7 +40,7 @@
       </div>
     </div>
 
-    <!-- Player Seats - OUTSIDE the table -->
+<!-- Player Seats - OUTSIDE the table -->
     <div class="player-seats">
       <!-- Player 1 (Top Left) -->
       <div class="player-seat" id="seat-1">
@@ -50,8 +50,8 @@
             <div class="card face-down"></div>
           </div>
           <div class="player-info">
-            <div class="player-name">Empty Seat</div>
-            <div class="player-chips">$0</div>
+            <div class="player-name">Player 1</div>
+            <div class="player-chips">$1000</div>
           </div>
           <div class="player-bet hidden">$0</div>
           <div class="player-status hidden"></div>
@@ -66,8 +66,8 @@
             <div class="card face-down"></div>
           </div>
           <div class="player-info">
-            <div class="player-name">Empty Seat</div>
-            <div class="player-chips">$0</div>
+            <div class="player-name">Player 2</div>
+            <div class="player-chips">$1000</div>
           </div>
           <div class="player-bet hidden">$0</div>
           <div class="player-status hidden"></div>
@@ -82,8 +82,8 @@
             <div class="card face-down"></div>
           </div>
           <div class="player-info">
-            <div class="player-name">Empty Seat</div>
-            <div class="player-chips">$0</div>
+            <div class="player-name">Player 3</div>
+            <div class="player-chips">$1000</div>
           </div>
           <div class="player-bet hidden">$0</div>
           <div class="player-status hidden"></div>
@@ -98,8 +98,8 @@
             <div class="card face-down"></div>
           </div>
           <div class="player-info">
-            <div class="player-name">Empty Seat</div>
-            <div class="player-chips">$0</div>
+            <div class="player-name">Player 4</div>
+            <div class="player-chips">$1000</div>
           </div>
           <div class="player-bet hidden">$0</div>
           <div class="player-status hidden"></div>
@@ -114,8 +114,8 @@
             <div class="card face-down"></div>
           </div>
           <div class="player-info">
-            <div class="player-name">Empty Seat</div>
-            <div class="player-chips">$0</div>
+            <div class="player-name">Player 5</div>
+            <div class="player-chips">$1000</div>
           </div>
           <div class="player-bet hidden">$0</div>
           <div class="player-status hidden"></div>
@@ -124,7 +124,7 @@
 
       <!-- Current Player (Me) - Always at Bottom -->
       <div class="player-seat user-seat" id="seat-0">
-        <div class="player" id="current-player">
+        <div class="player active-player" id="current-player">
           <div class="player-cards">
             <div class="card">A♠</div>
             <div class="card">K♠</div>
