--- a/Client/Screens/poker/poker.html
+++ b/Client/Screens/poker/poker.html
@@ -26,99 +26,94 @@
     <div class="poker-table">
       <!-- Pot Container -->
       <div class="pot">
-        <div class="pot-amount">$0</div>
-        <span class="material-symbols-outlined pot-icon">poker_chip</span>
+        <span>Total Pot: </span>
+        <div class="pot-amount">$1.15</div>
       </div>
 
       <!-- Community Cards -->
       <div class="community-cards">
-        <div class="card face-down">?</div>
-        <div class="card face-down">?</div>
-        <div class="card face-down">?</div>
-        <div class="card face-down">?</div>
-        <div class="card face-down">?</div>
+        <div class="card">10♥</div>
+        <div class="card">6♦</div>
+        <div class="card">J♠</div>
+        <div class="card face-down"></div>
+        <div class="card face-down"></div>
       </div>
     </div>
 
-<!-- Player Seats - OUTSIDE the table -->
+<!-- Player Seats - Positioned exactly like GGPoker -->
     <div class="player-seats">
       <!-- Player 1 (Top Left) -->
       <div class="player-seat" id="seat-1">
-        <div class="player hidden">
+        <div class="player">
           <div class="player-cards">
             <div class="card face-down"></div>
             <div class="card face-down"></div>
           </div>
           <div class="player-info">
-            <div class="player-name">Player 1</div>
-            <div class="player-chips">$1000</div>
+            <div class="player-name">Star-Lord</div>
+            <div class="player-chips">$10.00</div>
           </div>
-          <div class="player-bet hidden">$0</div>
-          <div class="player-status hidden"></div>
+          <div class="player-bet">$0.10</div>
         </div>
       </div>
 
       <!-- Player 2 (Top) -->
       <div class="player-seat" id="seat-2">
-        <div class="player hidden">
+        <div class="player">
           <div class="player-cards">
             <div class="card face-down"></div>
             <div class="card face-down"></div>
           </div>
           <div class="player-info">
-            <div class="player-name">Player 2</div>
-            <div class="player-chips">$1000</div>
+            <div class="player-name">mishavoinn</div>
+            <div class="player-chips">$11.22</div>
           </div>
           <div class="player-bet hidden">$0</div>
-          <div class="player-status hidden"></div>
         </div>
       </div>
 
       <!-- Player 3 (Top Right) -->
       <div class="player-seat" id="seat-3">
-        <div class="player hidden">
+        <div class="player">
           <div class="player-cards">
             <div class="card face-down"></div>
             <div class="card face-down"></div>
           </div>
           <div class="player-info">
-            <div class="player-name">Player 3</div>
-            <div class="player-chips">$1000</div>
+            <div class="player-name">GOGOHong</div>
+            <div class="player-chips">$16.15</div>
           </div>
           <div class="player-bet hidden">$0</div>
-          <div class="player-status hidden"></div>
         </div>
       </div>
 
       <!-- Player 4 (Bottom Right) -->
       <div class="player-seat" id="seat-4">
-        <div class="player hidden">
+        <div class="player">
           <div class="player-cards">
             <div class="card face-down"></div>
             <div class="card face-down"></div>
           </div>
           <div class="player-info">
-            <div class="player-name">Player 4</div>
-            <div class="player-chips">$1000</div>
+            <div class="player-name">LogicMan</div>
+            <div class="player-chips">$10.78</div>
           </div>
           <div class="player-bet hidden">$0</div>
-          <div class="player-status hidden"></div>
         </div>
       </div>
 
       <!-- Player 5 (Bottom Left) -->
       <div class="player-seat" id="seat-5">
-        <div class="player hidden">
+        <div class="player">
           <div class="player-cards">
             <div class="card face-down"></div>
             <div class="card face-down"></div>
           </div>
           <div class="player-info">
-            <div class="player-name">Player 5</div>
-            <div class="player-chips">$1000</div>
+            <div class="player-name">leo sing</div>
+            <div class="player-chips">$7.26</div>
           </div>
-          <div class="player-bet hidden">$0</div>
-          <div class="player-status hidden"></div>
+          <div class="player-bet">$0.25</div>
         </div>
       </div>
 
@@ -130,11 +125,10 @@
             <div class="card">K♠</div>
           </div>
           <div class="player-info">
-            <div class="player-name">You</div>
-            <div class="player-chips">$1000</div>
+            <div class="player-name">ayo_yo</div>
+            <div class="player-chips">$13.11</div>
           </div>
-          <div class="player-bet hidden">$0</div>
-          <div class="player-status hidden"></div>
+          <div class="player-bet">$0.10</div>
         </div>
       </div>
     </div>
