--- a/Client/Screens/poker/poker.html
+++ b/Client/Screens/poker/poker.html
@@ -7,11 +7,10 @@
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
- 
-  </head>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+</head>
 
 <body>
   <div class="back button">
@@ -20,99 +19,102 @@
     </span>
   </div>
 
-  <div class="content">
-
-    <div class="table">
-
-      <div class="pot">
-        <span class="pot-number">$500</span>
-        <span class="material-symbols-outlined" style="
-    font-size: 30px;
-    margin-top: 2.5px;
-    opacity: .8;">
-          poker_chip
-        </span>
-      </div>
-
-      <div class="users">
-        <div class="user me">
-          <div class="cards">
-            <div class="card">
-              <div class="number">3</div>
-            </div>
-            <div class="card">
-              <div class="number">2</div>
-            </div>
-          </div>
-          <div class="user-content">
-            <div class="name">stadfsdfsdf</div>
-            <div class="balance">$500</div>
-          </div>
+  <div class="main-container">
+    <div class="content">
+      <div class="table">
+        <div class="pot">
+          <span class="pot-number">$500</span>
+          <span class="material-symbols-outlined" style="font-size: 30px; margin-top: 2.5px; opacity: .8;">
+            poker_chip
+          </span>
         </div>
-        <div class="other-users">
-          <div class="user">
+
+        <!-- Community cards container -->
+        <div class="table-cards">
+          <div class="table-card hidden">?</div>
+          <div class="table-card hidden">?</div>
+          <div class="table-card hidden">?</div>
+          <div class="table-card hidden">?</div>
+          <div class="table-card hidden">?</div>
+        </div>
+
+        <!-- Game status display -->
+        <div class="game-status">Waiting for players...</div>
+
+        <div class="users">
+          <!-- Current player (always present) -->
+          <div class="user me">
             <div class="cards">
-              <div class="card"></div>
               <div class="card">
+                <div class="number">?</div>
+              </div>
+              <div class="card">
+                <div class="number">?</div>
               </div>
             </div>
             <div class="user-content">
-              <div class="name">stadfsdfsdf</div>
+              <div class="name">You</div>
               <div class="balance">$500</div>
+              <div class="player-action hidden"></div>
             </div>
           </div>
-          <div class="user">
-            <div class="cards">
-              <div class="card"></div>
-              <div class="card">
-              </div>
-            </div>
-            <div class="user-content">
-              <div class="name">stadfsdfsdf</div>
-              <div class="balance">$500</div>
-            </div>
-          </div>
-          <div class="user">
-            <div class="cards">
-              <div class="card"></div>
-              <div class="card">
-              </div>
-            </div>
-            <div class="user-content">
-              <div class="name">stadfsdfsdf</div>
-              <div class="balance">$500</div>
-            </div>
-          </div>
-          <div class="user">
-            <div class="cards">
-              <div class="card"></div>
-              <div class="card">
-              </div>
-            </div>
-            <div class="user-content">
-              <div class="name">stadfsdfsdf</div>
-              <div class="balance">$500</div>
-            </div>
-          </div>
-          <div class="user">
-            <div class="cards">
-              <div class="card"></div>
-              <div class="card">
-              </div>
-            </div>
-            <div class="user-content">
-              <div class="name">stadfsdfsdf</div>
-              <div class="balance">$500</div>
-            </div>
+
+          <!-- Other players - these will be populated dynamically -->
+          <div class="other-users">
+            <!-- Seat positions will be filled dynamically -->
           </div>
         </div>
       </div>
 
+      <!-- Player action bar - new feature -->
+      <div class="player-actions">
+        <div class="action-buttons">
+          <button id="fold-btn" class="action-btn fold-btn">Fold</button>
+          <button id="check-btn" class="action-btn check-btn">Check</button>
+          <div class="bet-controls">
+            <div class="bet-amount-container">
+              <input type="number" id="bet-amount" min="10" max="1000" value="10">
+              <div class="bet-amount-controls">
+                <button id="bet-increase" class="bet-control-btn">+</button>
+                <button id="bet-decrease" class="bet-control-btn">-</button>
+              </div>
+            </div>
+            <button id="bet-btn" class="action-btn bet-btn">Bet</button>
+            <button id="raise-btn" class="action-btn raise-btn">Raise</button>
+          </div>
+        </div>
+      </div>
     </div>
 
+    <!-- Chat system - new feature -->
+    <div class="chat-container">
+      <div class="chat-header">
+        <h3>Table Chat</h3>
+      </div>
+      <div class="chat-messages" id="chat-messages">
+        <!-- Messages will be appended here -->
+        <div class="system-message">Welcome to the poker table!</div>
+      </div>
+      <div class="chat-input-container">
+        <input type="text" id="chat-input" placeholder="Type a message...">
+        <button id="send-message-btn">
+          <span class="material-symbols-outlined">send</span>
+        </button>
+      </div>
+    </div>
   </div>
 
-  <script src="main.js"></script>
+  <!-- Load socket.io client -->
+  <script src="/socket.io/socket.io.js"></script>
+  
+  <!-- Load poker solver -->
+  <script src="../pokerSolver.js"></script>
+  
+  <!-- Load our custom socket client -->
+  <script src="socket-client.js"></script>
+  
+  <!-- Load game logic -->
+  <script src="game.js"></script>
 
 </body>
 
