--- a/Client/Screens/join-game.html
+++ b/Client/Screens/join-game.html
@@ -38,7 +38,7 @@
     
     .pin-input {
       display: flex;
-      justify-content: space-between;
+      justify-content: center;
       margin-bottom: 20px;
     }
     
