--- a/Client/Screens/poker/poker.html
+++ b/Client/Screens/poker/poker.html
@@ -89,14 +89,12 @@
           <div class="table-card hidden" data-value="?" data-suit="?"></div>
         </div>
 
-        <!-- Current player container -->
-        <div class="users">
-          <!-- Current player will be added dynamically -->
-        </div>
-
-        <!-- Other players container -->
         <div class="other-users">
-          <!-- Other players will be added dynamically -->
+          <div class="player-position position-0" id="position-0"></div>
+          <div class="player-position position-1" id="position-1"></div>
+          <div class="player-position position-2" id="position-2"></div>
+          <div class="player-position position-3" id="position-3"></div>
+          <div class="player-position position-4" id="position-4"></div>
         </div>
       </div>
 
