--- a/Client/Screens/poker/poker.html
+++ b/Client/Screens/poker/poker.html
@@ -80,6 +80,9 @@
       
       <!-- Poker table -->
       <div class="table">
+        
+        <div class="users"></div>
+
         <!-- Community cards container -->
         <div class="table-cards">
           <div class="table-card hidden" data-value="?" data-suit="?"></div>
