--- a/Client/Screens/index.html
+++ b/Client/Screens/index.html
@@ -23,6 +23,33 @@
     </div>
   </div>
 
+  <div class="user-chips-container">
+    <div class="current-chips">
+      <span class="chip-icon">💰</span>
+      <span class="chip-amount">$<span id="user-chip-count">1000</span></span>
+    </div>
+    <button id="add-chips-btn" class="button">Add Chips</button>
+    
+    <div id="chip-refill-modal" class="modal">
+      <div class="modal-content">
+        <span class="close-modal">&times;</span>
+        <h2>Add Chips</h2>
+        <p>Select amount to add to your balance:</p>
+        <div class="chip-options">
+          <button class="chip-option" data-amount="100">$100</button>
+          <button class="chip-option" data-amount="1000">$1,000</button>
+          <button class="chip-option" data-amount="10000">$10,000</button>
+          <button class="chip-option" data-amount="100000">$100,000</button>
+        </div>
+        <div class="custom-amount">
+          <label for="custom-chip-amount">Custom amount:</label>
+          <input type="number" id="custom-chip-amount" min="100" max="1000000000" step="100" value="1000">
+          <button id="add-custom-amount">Add</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <script src="../pokerSolver.js"></script>
   <script>
     document.addEventListener('DOMContentLoaded', function() {
